--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         an error
       </p>
       <div class="fixed-bottom p-4">
-        Made with ❤️ by
+        Made with ❤️ by Julie
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
     </div>
